--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -7,6 +7,9 @@
     "wdth" 100;
 }
 /* shared style*/
+.secondary-background{
+    background-color: #FFF8F3;
+}
 .text-primary{
     color:#FD6E0A ;
 }
@@ -28,6 +31,17 @@
     border: none;
     padding:18px 35px ;
     border-radius: 5px;
+}
+
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+}
+
+.section-description{
+    font-size: 18px;
+    color: #757575;
 }
 
 /* Nav styles*/
@@ -76,4 +90,28 @@ nav li a{
 }
 .banner-profile-pic{
     width: 580px;
+}
+
+/*main styles*/
+
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+
+}
+
+/*about styles*/
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    margin-top: 130px;
+}
+.about-items{
+    display: flex;
+    justify-content: space-around;
+
+}
+.item-description{
+    font-weight: 600;
 }
