--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -44,6 +44,10 @@
     color: #757575;
 }
 
+.text-center{
+    text-align: center;
+}
+
 /* Nav styles*/
 nav{
     display: flex;
@@ -99,13 +103,17 @@ main{
     margin: 0 auto;
 
 }
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
 
 /*about styles*/
 .about{
     border-radius: 10px;
     padding: 130px 150px;
     text-align: center;
-    margin-top: 130px;
+    
 }
 .about-items{
     display: flex;
@@ -114,4 +122,18 @@ main{
 }
 .item-description{
     font-weight: 600;
+}
+/*skill section style*/
+.skills-container{
+    display: flex;
+    gap: 24px;
+
+    justify-content: space-around;
+}
+
+.skills{
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow:0px 6px 50px 0px rgba(0, 0, 0, 0.06); 
+    
 }
